--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-a-beep')
+    implementation project(':react-native-sound')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-android-wifi')
